# ftag-personal

./: .gitignore  Cargo.toml  README.md
src/: ftag.rs  main.rs
