[package]
name = "ftag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
clap = { version = "4.4.14", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
